--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide": "^0.364.0",
     "lucide-react": "^0.364.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
